--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -2,7 +2,7 @@ name: "Synopsys Intelligent Security Scan"
 
 on:
   push:
-    branches: [ master ]
+    branches: [ just-sca ]
 
 jobs:
   analyze:
