--- a/io-manifest.yml
+++ b/io-manifest.yml
@@ -20,7 +20,7 @@ environment:
   scmRepositoryName: github-io-sample
   scmBranchName: master
   githubApiUrl: https://api.github.com/repos/
-  jiraProjectName: <<JIRA_PROJECT_NAME>>
+  jiraProjectName: github-io-sample
   jiraIssuesQuery: <<JIRA_ISSUES_QUERY>>
   jiraApiUrl: <<JIRA_API_URL>>
   jiraUserName: <<JIRA_USERNAME>>
