--- a/io-manifest.yml
+++ b/io-manifest.yml
@@ -11,8 +11,8 @@ application:
   buildSystem: Maven
   riskMatrixRevision: Rev1.0
   sourceFilePattern: .*\+\+\+.*(\.java|\.jsp)+.*
-  sensitivePackagePattern: .*(\+\+\+.*(com\/synopsys\/app)).*
-  fileChangeThreshold: 20
+  sensitivePackagePattern: .*(\+\+\+.*(com\/example\/app)).*
+  fileChangeThreshold: 10
   release: major
 environment:
   scm: github
@@ -20,3 +20,8 @@ environment:
   scmRepositoryName: github-io-sample
   scmBranchName: master
   githubApiUrl: https://api.github.com/repos/
+  jiraProjectName: <<JIRA_PROJECT_NAME>>
+  jiraIssuesQuery: <<JIRA_ISSUES_QUERY>>
+  jiraApiUrl: <<JIRA_API_URL>>
+  jiraUserName: <<JIRA_USERNAME>>
+  jiraAuthToken: <<JIRA_AUTH_TOKEN>>
