--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -24,15 +24,13 @@ jobs:
       
     - name: Synopsys Intelligent Security Scan
       id: prescription
-      uses: synopsys-sig/intelligent-security-scan@26a9e0cc2406844cc867ec9a1c94669b515ba78a
+      uses: synopsys-sig/intelligent-security-scan@v1
       with:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
         workflowServerToken: ${{secrets.WORKFLOW_SERVER_TOKEN}}
-        additionalWorkflowArgs: --persona=developer --release.type=minor --sast.rescan.threshold=0  --sca.rescan.threshold=0 
-                  --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
-                  --sensitive.package.pattern='.*(\\+\\+\\+.*(com\\/example\\/app)).*'
+        additionalWorkflowArgs: "--persona=developer"
         stage: "IO"
     
     # Please note that the ID in previous step was set to prescription
@@ -45,7 +43,7 @@ jobs:
           export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
           wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
           unzip -j polaris_cli-linux64.zip -d /tmp
-          /tmp/polaris analyze -w
+          /tmp/polaris analyze -w --coverity-ignore-capture-failure
     
     # Please note that the ID in previous step was set to prescription
     # in order for this logic to work
@@ -57,7 +55,7 @@ jobs:
     
     - name: Synopsys Intelligent Security Scan
       if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
-      uses: synopsys-sig/intelligent-security-scan@26a9e0cc2406844cc867ec9a1c94669b515ba78a
+      uses: synopsys-sig/intelligent-security-scan@v1
       with:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
