--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
       # Environment variables
     env:
-      CSA:'cov-analysis-linux64-2021.03'
+      CSA: cov-analysis-linux64-2021.03
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
