--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -32,9 +32,9 @@ jobs:
         run: |
             set -x
                         
-            curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE} ${{secrets.COV_URL}}/downloadFile.htm?fn=$CSA.tar.gz | tar -xzf -
-            curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE} -o license.dat ${{secrets.COV_URL}}/downloadFile.htm?fn=license.dat
-            curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE} -o ca.cer ${{secrets.COV_URL}}/downloadFile.htm?fn=ca.cer
+            curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} ${{secrets.COV_URL}}/downloadFile.htm?fn=$CSA.tar.gz | tar -xzf -
+            curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} -o license.dat ${{secrets.COV_URL}}/downloadFile.htm?fn=license.dat
+            curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} -o ca.cer ${{secrets.COV_URL}}/downloadFile.htm?fn=ca.cer
             mv license.dat $CSA/bin
       
       - name: Coverity Analysis
