--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -1,8 +1,9 @@
 name: "Synopsys Intelligent Security Scan"
 
 on:
-  push:
-    branches: [ master ]
+  pull_request:
+    branches: 
+      - '**'
 
 jobs:
   analyze:
