--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Coverity Tools Download
         run: |
             set -x
-            COVERITY_TOOLS_HOME=/tmp/$CSA
+            COVERITY_TOOL_HOME=/tmp/$CSA
             
             curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} ${{secrets.COV_URL}}/downloadFile.htm?fn=$CSA.tar.gz | tar -xzf - -C /tmp/
             curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} -o license.dat ${{secrets.COV_URL}}/downloadFile.htm?fn=license.dat
             curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} -o ca.cer ${{secrets.COV_URL}}/downloadFile.htm?fn=ca.cer
-            mv license.dat $COVERITY_TOOLS_HOME/bin
+            mv license.dat $COVERITY_TOOL_HOME/bin
       
       - name: Coverity Analysis
         run: |
