--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -39,7 +39,7 @@ jobs:
             curl -kfLsS --user ${{secrets.COV_USER}}:${{secrets.COVERITY_PASSPHRASE}} -o ca.cer ${{secrets.COV_URL}}/downloadFile.htm?fn=ca.cer
             mv license.dat $COVERITY_TOOL_HOME/bin
             
-            echo 'COVERITY_TOOL_HOME<<$COVERITY_TOOL_HOME' >> $GITHUB_ENV
+            echo 'COVERITY_TOOL_HOME=$COVERITY_TOOL_HOME' >> $GITHUB_ENV
       
       - name: Coverity Analysis
         run: |
